# job_shop_scheduling_solver

./: README.md  file.dot  jss_v0.1.py  jss_v0.2.py  jss_v0.3.py  jss_v0.4.py  jss_v0.5.1.py  jss_v0.5.py  jss_v0.6.1.py  jss_v0.6.py  or_tools_v0.1.py  pyproject.toml  tests_generator.py  tests_print.py
tests/: instance1000_10.txt  instance1000_100.txt  instance100_100.txt  instance100_30.txt  instance200_200.txt  instance300_300.txt
tests2/: instance1000_100.txt  instance100_100.txt  instance10_10.txt  instance200_100.txt  instance20_20.txt  instance300_100.txt  instance30_30.txt  instance400_100.txt  instance40_40.txt  instance500_100.txt  instance50_50.txt  instance600_100.txt  instance60_60.txt  instance700_100.txt  instance70_70.txt  instance800_100.txt  instance80_80.txt  instance900_100.txt  instance90_90.txt
tests3/: instance50_30.txt
tests4/: instance1000_100.txt  instance1500_100.txt  instance2000_100.txt  instance500_100.txt
tests5/: instance1000_100.txt  instance100_10.txt  instance100_30.txt
