[project]
name = "job-shop-scheduler-classical-solver"
version = "0.1.0"
description = "Classical solver for the job shop scheduling problem"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=24.10.0",
    "ortools>=9.11.4210",
    "pyinstaller>=6.11.1",
    "ruff>=0.6.9",
]
